--- a/resources/log4j.properties
+++ b/resources/log4j.properties
@@ -1,10 +1,17 @@
 # Based on the example properties given at http://logging.apache.org/log4j/1.2/manual.html
 # Set root logger level to DEBUG and its only appender to A1.
-log4j.rootLogger=DEBUG, A1
+log4j.rootLogger=ERROR, FILE
 
-# A1 is set to be a ConsoleAppender.
-log4j.appender.A1=org.apache.log4j.ConsoleAppender
+# CONSOLE is set to be a ConsoleAppender.
+log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
 
-# A1 uses PatternLayout.
-log4j.appender.A1.layout=org.apache.log4j.PatternLayout
-log4j.appender.A1.layout.ConversionPattern= %-5p %c - %m%n
+log4j.appender.FILE=org.apache.log4j.FileAppender
+log4j.appender.FILE.File=${user.home}/cxr.log
+
+# CONSOLE uses PatternLayout.
+log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
+log4j.appender.CONSOLE.layout.ConversionPattern= %-5p %c - %m%n
+
+
+log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
+log4j.appender.FILE.layout.ConversionPattern= %-5p %c - %m%n
